infrastructure/netdata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: netdata
  namespace: netdata
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - monitoring.ynoacamino.me
      secretName: netdata-tls

  rules:
    - host: monitoring.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netdata
                port:
                  number: 19999
